// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should ge all stops 1`] = `
Array [
  Object {
    "code": "TPT",
    "inboundForecastsEnabled": true,
    "inboundOperatingNormally": true,
    "inboundStatusMessage": "Services operating normally",
    "isCycleRide": false,
    "isParkRide": false,
    "latitude": 53.34835,
    "line": "Luas Red Line",
    "longitute": -6.22925833333333,
    "name": "The Point",
    "outboundForecastsEnabled": true,
    "outboundOperatingNormally": true,
    "outboundStatusMessage": "Services operating normally",
    "pronunciation": "The Point",
  },
  Object {
    "code": "SDK",
    "inboundForecastsEnabled": true,
    "inboundOperatingNormally": true,
    "inboundStatusMessage": "Services operating normally",
    "isCycleRide": false,
    "isParkRide": false,
    "latitude": 53.3488222222222,
    "line": "Luas Red Line",
    "longitute": -6.23714722222222,
    "name": "Spencer Dock",
    "outboundForecastsEnabled": true,
    "outboundOperatingNormally": true,
    "outboundStatusMessage": "Services operating normally",
    "pronunciation": "Spencer Dock",
  },
  Object {
    "code": "BRO",
    "inboundForecastsEnabled": true,
    "inboundOperatingNormally": true,
    "inboundStatusMessage": "Services operating normally",
    "isCycleRide": false,
    "isParkRide": false,
    "latitude": 53.37223956,
    "line": "Luas Green Line",
    "longitute": -6.29768465,
    "name": "Broombridge",
    "outboundForecastsEnabled": true,
    "outboundOperatingNormally": true,
    "outboundStatusMessage": "Services operating normally",
    "pronunciation": "Broombridge",
  },
  Object {
    "code": "CAB",
    "inboundForecastsEnabled": true,
    "inboundOperatingNormally": true,
    "inboundStatusMessage": "Services operating normally",
    "isCycleRide": false,
    "isParkRide": false,
    "latitude": 53.36433419,
    "line": "Luas Green Line",
    "longitute": -6.28196899,
    "name": "Cabra",
    "outboundForecastsEnabled": true,
    "outboundOperatingNormally": true,
    "outboundStatusMessage": "Services operating normally",
    "pronunciation": "Cabra",
  },
]
`;

exports[`It should ge all stops for a line 1`] = `
Array [
  Object {
    "code": "BRO",
    "inboundForecastsEnabled": true,
    "inboundOperatingNormally": true,
    "inboundStatusMessage": "Services operating normally",
    "isCycleRide": false,
    "isParkRide": false,
    "latitude": 53.37223956,
    "line": "Luas Green Line",
    "longitute": -6.29768465,
    "name": "Broombridge",
    "outboundForecastsEnabled": true,
    "outboundOperatingNormally": true,
    "outboundStatusMessage": "Services operating normally",
    "pronunciation": "Broombridge",
  },
  Object {
    "code": "CAB",
    "inboundForecastsEnabled": true,
    "inboundOperatingNormally": true,
    "inboundStatusMessage": "Services operating normally",
    "isCycleRide": false,
    "isParkRide": false,
    "latitude": 53.36433419,
    "line": "Luas Green Line",
    "longitute": -6.28196899,
    "name": "Cabra",
    "outboundForecastsEnabled": true,
    "outboundOperatingNormally": true,
    "outboundStatusMessage": "Services operating normally",
    "pronunciation": "Cabra",
  },
]
`;
